--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ code/.Rhistory
 code/.RData
 code/.RData
 data/Prices/DailyPrice.AMEX.NASDAQ.NYSE.csv
+code/Data Mining/.RDataTmp
+code/Data Mining/.Rhistory
