--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ code/.RData
 data/Prices/DailyPrice.AMEX.NASDAQ.NYSE.csv
 code/Data Mining/.RDataTmp
 code/Data Mining/.Rhistory
+Final Evaluation/.Rhistory
