--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ data/Prices/DailyPrice.AMEX.NASDAQ.NYSE.csv
 code/Data Mining/.RDataTmp
 code/Data Mining/.Rhistory
 Final Evaluation/.Rhistory
+Final Evaluation/.RData
